ghc-4335c07/testsuite/tests/indexed-types/should_fail/T8550.stderr

T8550.hs:8:3: error:
    • Reduction stack overflow; size = 201
      When simplifying the following type: F ()
      Use -freduction-depth=0 to disable this check
      (any upper bound you could choose might fail unpredictably with
       minor updates to GHC, so disabling the check is recommended if
       you're sure that type checking should terminate)
    • In the ambiguity check for ‘A’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      In the definition of data constructor ‘A’
      In the data type declaration for ‘A’
